[package]
name = "hermit-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.78.0", default-features = false, features = ["admission", "client", "rustls-tls"] }
actix-web = { version = "4.2.1", features = ["rustls"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
tracing = "0.1.37"
serde_json = "1.0.91"
serde = "1.0.152"
anyhow = "1.0.68"
env_logger = "0.10.0"
json-patch = "0.3.0"
serde_yaml = "0.9.16"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
